// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles when limit reached 1`] = `
<div
  className="UnsupportedStudentsPure"
>
  <div
    style={
      Object {
        "backgroundColor": "#eee",
        "borderBottom": "1px solid #ccc",
        "color": "black",
        "padding": 10,
      }
    }
  >
    Students to check on
  </div>
  <div
    className="Card "
    style={
      Object {
        "border": "none",
        "borderRadius": 3,
        "padding": 10,
      }
    }
  >
    <div>
      There are 
      <b>
        29
         students
      </b>
       you work with who have a D or an F right now but haven't been mentioned in NGE or 10GE for the last month.
    </div>
    <div
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/67"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Skywalker
            </a>
          </span>
          <span>
             has a 
            50
             in 
            <a
              href="/sections/1"
            >
              SHS-BIO-TUES
            </a>
          </span>
          <span>
             with 
            <a
              className="Educator"
              href="mailto:bill@demo.studentinsights.org"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Bill Teacher
            </a>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/115"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Minnie
               
              Pan
            </a>
          </span>
          <span>
             has a 
            50
             in 
            <a
              href="/sections/6"
            >
              SCI-201B
            </a>
          </span>
          <span>
             with 
            <a
              className="Educator"
              href="mailto:fatima@demo.studentinsights.org"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Fatima Teacher
            </a>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/73"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Kenobi
            </a>
          </span>
          <span>
             has a 
            52
             in 
            <a
              href="/sections/1"
            >
              SHS-BIO-TUES
            </a>
          </span>
          <span>
             with 
            <a
              className="Educator"
              href="mailto:bill@demo.studentinsights.org"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Bill Teacher
            </a>
          </span>
        </div>
      </div>
    </div>
    <div>
      There are 
      29
       students total.  Start with checking in on these first 
      3
       students.
    </div>
  </div>
</div>
`;

exports[`pure component matches snapshot 1`] = `
<div
  className="UnsupportedStudentsPure"
>
  <div
    style={
      Object {
        "backgroundColor": "#eee",
        "borderBottom": "1px solid #ccc",
        "color": "black",
        "padding": 10,
      }
    }
  >
    Students to check on
  </div>
  <div
    className="Card "
    style={
      Object {
        "border": "none",
        "borderRadius": 3,
        "padding": 10,
      }
    }
  >
    <div>
      There are 
      <b>
        14
         students
      </b>
       you work with who have a D or an F right now but haven't been mentioned in NGE or 10GE for the last month.
    </div>
    <div
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/67"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Skywalker
            </a>
          </span>
          <span>
             has a 
            50
             in 
            <a
              href="/sections/1"
            >
              SHS-BIO-TUES
            </a>
          </span>
          <span>
             with 
            <a
              className="Educator"
              href="mailto:bill@demo.studentinsights.org"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Bill Teacher
            </a>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/115"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Minnie
               
              Pan
            </a>
          </span>
          <span>
             has a 
            50
             in 
            <a
              href="/sections/6"
            >
              SCI-201B
            </a>
          </span>
          <span>
             with 
            <a
              className="Educator"
              href="mailto:fatima@demo.studentinsights.org"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Fatima Teacher
            </a>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/73"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Kenobi
            </a>
          </span>
          <span>
             has a 
            52
             in 
            <a
              href="/sections/1"
            >
              SHS-BIO-TUES
            </a>
          </span>
          <span>
             with 
            <a
              className="Educator"
              href="mailto:bill@demo.studentinsights.org"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Bill Teacher
            </a>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <div>
          <span>
            <a
              href="/students/87"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Pocahontas
               
              Kenobi
            </a>
          </span>
          <span>
             has a 
            55
             in 
            <a
              href="/sections/3"
            >
              ART-302A
            </a>
          </span>
          <span>
             with 
            <a
              className="Educator"
              href="mailto:hugo@demo.studentinsights.org"
              style={
                Object {
                  "fontWeight": "bold",
                }
              }
            >
              Hugo Teacher
            </a>
          </span>
        </div>
      </div>
    </div>
    <div>
      <a
        href="#"
        onClick={[Function]}
      >
        See more
      </a>
    </div>
  </div>
</div>
`;
